@@ -37,7 +37,6 @@ importFrom(spatstat,owin)
 importFrom(spatstat,plot.im)
 importFrom(spatstat,plot.owin)
 importFrom(spatstat,reverse.xypolygon)
-importFrom(statmod,gauss.quad)
 importFrom(stats,cov2cor)
 importFrom(stats,dist)
 importFrom(stats,integrate)
